<resources>
    <string name="app_name">PokeScript</string>
    <string name="search_pokemon_by_type">Search Pokemon By Type</string>
    <string name="cancel">Cancel</string>
    <string name="name">name</string>
    <string name="pokescript">PokeScript</string>
    <string name="filter_pokemon_by_type">Filter Pokemon by type</string>
    <string name="map_of_pokemon">Map of Pokemon</string>
    <string name="image_of_a_pokemon">Image of a pokemon</string>
    <string name="go_back">Go back</string>
    <string name="settings_for_pokemon">Settings for pokemon</string>
    <string name="saved_pokemon">Saved Pokemon</string>
    <string name="your_saved_pokemon_will_be_here_in_your_party">View your saved Pokemon Party!</string>
    <string name="world_map">World Map</string>
    <string name="map_shows_the_last_know_location_of_pokemon">Discover Pokemon through the world map!</string>
    <string name="facebook_app_id">772769827416292</string>
    <string name="fb_login_protocol_scheme">fb772769827416292</string>
    <string name="facebook_client_token">1311c8ece74b13c94a81c26ba0722b91</string>
    <string name="login_or_sign_up_below_to_get_started">Login or Sign Up below to get started</string>
</resources>