<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pokemon_blue">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/savedFragment_back"
        app:layout_constraintTop_toTopOf="@+id/SavedFragmentTitle"
        app:layout_constraintBottom_toBottomOf="@+id/SavedFragmentTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="@string/go_back" />

    <ImageView
        android:id="@+id/pokemonFragmentSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/SavedFragmentTitle"
        app:layout_constraintBottom_toBottomOf="@+id/SavedFragmentTitle"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_settings"
        android:contentDescription="@string/settings_for_pokemon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SavedFragmentTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/padding"
        android:fontFamily="@font/pokemon"
        android:textColor="@color/pokemon_yellow"
        android:textSize="@dimen/pokemon_fragment_title_size"
        android:textStyle="bold"
        android:text="@string/saved_pokemon" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        app:layout_constraintTop_toBottomOf="@+id/SavedFragmentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="2dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/savedFragmentPlaceholder"
        app:layout_constraintTop_toBottomOf="@+id/SavedFragmentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        android:textColor="@color/pokemon_yellow"
        android:textSize="@dimen/pokemon_title_text_size"
        android:textStyle="bold"
        android:text="@string/your_saved_pokemon_will_be_here_in_your_party" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedFragmentRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/SavedFragmentTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:layout_marginBottom="?actionBarSize"
        android:padding="@dimen/padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/pokemon_saved_item" />

</androidx.constraintlayout.widget.ConstraintLayout>