<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pokemon_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pokemonFragmentTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/padding"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/pokemon"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/pokemon_fragment_title_size"
        android:text="@string/pokescript" />

    <ImageView
        android:id="@+id/pokemonFragmentSettings"
        android:layout_width="31dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginRight="35dp"
        app:layout_constraintEnd_toEndOf="@+id/pokemonFragmentRefresh"
        app:layout_constraintTop_toTopOf="@+id/pokemonFragmentTitle"
        app:layout_constraintRight_toLeftOf="@id/logout_button"
        app:srcCompat="@drawable/ic_settings"
        android:contentDescription="@string/settings_for_pokemon" />

    <ImageView
        android:id="@+id/pokemonFragmentFilter"
        android:layout_width="31dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginRight="65dp"
        app:layout_constraintEnd_toEndOf="@+id/pokemonFragmentRefresh"
        app:layout_constraintTop_toTopOf="@+id/pokemonFragmentTitle"
        app:layout_constraintRight_toLeftOf="@id/logout_button"
        android:src="@drawable/ic_filter"
        android:contentDescription="@string/filter_pokemon_by_type" />

    <ProgressBar
        android:id="@+id/pokemonFragmentProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="2dp"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonFragmentSearch"
        tools:visibility="visible" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/pokemonFragmentSearch"
        style="@style/SearchViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:imeOptions="flagNoExtractUi"
        android:queryHint="Charmander"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemonFragmentTitle" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pokemonFragmentRefresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemonFragmentSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pokemonFragmentRV"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:listitem="@layout/pokemon_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pokemonFragmentPaginateProgress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:indeterminateDrawable="@drawable/progress"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        android:visibility="gone"/>

    <com.skyfishjy.library.RippleBackground
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/floating_action_btn_margin"
        android:layout_marginTop="@dimen/floating_action_btn_margin"
        android:id="@+id/rippleBackgroundSaved"
        app:rb_color="@color/pokemon_blue"
        app:rb_radius="32dp"
        app:rb_rippleAmount="4"
        app:rb_duration="1000"
        app:rb_scale="6">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/pokemonFragmentSavedFAB"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:src="@drawable/pokeball"
            app:civ_border="false"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/pokemon_blue"
            app:civ_shadow_radius="2dp" />

    </com.skyfishjy.library.RippleBackground>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/logout_button"
        android:layout_width="31dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/pokemonFragmentRefresh"
        app:layout_constraintTop_toTopOf="@+id/pokemonFragmentTitle" />

    <com.skyfishjy.library.RippleBackground
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/rippleBackgroundMap"
        app:rb_color="@color/pokemon_blue"
        android:shape="oval"
        app:rb_radius="32dp"
        app:rb_rippleAmount="4"
        app:rb_duration="1000"
        app:rb_scale="6">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:id="@+id/pokemonFragmentMapFAB"
            android:layout_margin="@dimen/floating_action_btn_margin"
            android:src="@drawable/map_icon"
            android:contentDescription="@string/map_of_pokemon" />

    </com.skyfishjy.library.RippleBackground>

</androidx.constraintlayout.widget.ConstraintLayout>